// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render InputCheckbox with HTML label HTML label 1`] = `
<div
  className="survey-question__input-checkbox-group-container"
>
  <div
    className="survey-question__input-checkbox-input-container"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-checkbox"
        id="test_first value__input-checkbox__first value"
        name="test_first value"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="first value"
      />
      <label
        htmlFor="test_first value__input-checkbox__first value"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<div>first value</div>",
            }
          }
        />
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-input-container checked"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={true}
        className="input-checkbox"
        id="test_second value__input-checkbox__second value"
        name="test_second value"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="second value"
      />
      <label
        htmlFor="test_second value__input-checkbox__second value"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<div>second value</div>",
            }
          }
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with minimum parameters Minimum parameters, one value selected 1`] = `
<div
  className="survey-question__input-checkbox-group-container"
>
  <div
    className="survey-question__input-checkbox-input-container checked"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={true}
        className="input-checkbox"
        id="test_val1__input-checkbox__val1"
        name="test_val1"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="val1"
      />
      <label
        htmlFor="test_val1__input-checkbox__val1"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "english value",
            }
          }
        />
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-input-container"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-checkbox"
        id="test_val2__input-checkbox__val2"
        name="test_val2"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="val2"
      />
      <label
        htmlFor="test_val2__input-checkbox__val2"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "Unilingual label",
            }
          }
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Conditional value hidden, same line, no value selected 1`] = `
<div
  className="survey-question__input-checkbox-group-container"
>
  <div
    className="survey-question__input-checkbox-input-container"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-checkbox"
        id="test_val1__input-checkbox__val1"
        name="test_val1"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="val1"
      />
      <label
        htmlFor="test_val1__input-checkbox__val1"
        onClick={[Function]}
      >
        <span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-crow faIconLeft"
            data-icon="crow"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={
              {
                "margin": "auto 0",
              }
            }
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M456 0c-48.6 0-88 39.4-88 88l0 29.2L12.5 390.6c-14 10.8-16.6 30.9-5.9 44.9s30.9 16.6 44.9 5.9L126.1 384l133.1 0 46.6 113.1c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3L311.1 384l40.9 0c1.1 0 2.1 0 3.2 0l46.6 113.2c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3l-42-102C484.9 354.1 544 280 544 192l0-64 0-8 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4C629 52 603.4 32 574 32l-50.1 0C507.7 12.5 483.3 0 456 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </span>
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "english value",
            }
          }
        />
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-input-container"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-checkbox"
        id="test_val2__input-checkbox__val2"
        name="test_val2"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="val2"
      />
      <label
        htmlFor="test_val2__input-checkbox__val2"
        onClick={[Function]}
      >
        <span>
          <img
            alt="Unilingual label"
            className="faIconLeft"
            src="img/test.png"
            style={
              {
                "height": "3em",
                "margin": "0 0.25em 0 0",
              }
            }
          />
        </span>
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "Unilingual label",
            }
          }
        />
      </label>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-input-container"
    onClick={[Function]}
  >
    <div
      className="label-input-container"
    >
      <input
        checked={false}
        className="input-checkbox"
        id="test_val3__input-checkbox__val3"
        name="test_val3"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value="val3"
      />
      <label
        htmlFor="test_val3__input-checkbox__val3"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "Translated string",
            }
          }
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Includes hidden values, conditional displayed, no custom, 2 columns, 2 selected values 1`] = `
<div
  className="survey-question__input-checkbox-group-container no-wrap"
>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container checked"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={true}
          className="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val1"
        />
        <label
          htmlFor="test_val1__input-checkbox__val1"
          onClick={[Function]}
        >
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-crow faIconLeft"
              data-icon="crow"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                {
                  "margin": "auto 0",
                }
              }
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M456 0c-48.6 0-88 39.4-88 88l0 29.2L12.5 390.6c-14 10.8-16.6 30.9-5.9 44.9s30.9 16.6 44.9 5.9L126.1 384l133.1 0 46.6 113.1c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3L311.1 384l40.9 0c1.1 0 2.1 0 3.2 0l46.6 113.2c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3l-42-102C484.9 354.1 544 280 544 192l0-64 0-8 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4C629 52 603.4 32 574 32l-50.1 0C507.7 12.5 483.3 0 456 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                fill="currentColor"
                style={{}}
              />
            </svg>
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english value",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container checked"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={true}
          className="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val2"
        />
        <label
          htmlFor="test_val2__input-checkbox__val2"
          onClick={[Function]}
        >
          <span>
            <img
              alt="Unilingual label"
              className="faIconLeft"
              src="img/test.png"
              style={
                {
                  "height": "3em",
                  "margin": "0 0.25em 0 0",
                }
              }
            />
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Unilingual label",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_conditionalVal__input-checkbox__conditionalVal"
          name="test_conditionalVal"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="conditionalVal"
        />
        <label
          htmlFor="test_conditionalVal__input-checkbox__conditionalVal"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english conditional",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val3__input-checkbox__val3"
          name="test_val3"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val3"
        />
        <label
          htmlFor="test_val3__input-checkbox__val3"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Translated string",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Shuffle choices, one selected value 1`] = `
<div
  className="survey-question__input-checkbox-group-container no-wrap"
>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container checked"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={true}
          className="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val2"
        />
        <label
          htmlFor="test_val2__input-checkbox__val2"
          onClick={[Function]}
        >
          <span>
            <img
              alt="Unilingual label"
              className="faIconLeft"
              src="img/test.png"
              style={
                {
                  "height": "3em",
                  "margin": "0 0.25em 0 0",
                }
              }
            />
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Unilingual label",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_conditionalVal__input-checkbox__conditionalVal"
          name="test_conditionalVal"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="conditionalVal"
        />
        <label
          htmlFor="test_conditionalVal__input-checkbox__conditionalVal"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english conditional",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val1"
        />
        <label
          htmlFor="test_val1__input-checkbox__val1"
          onClick={[Function]}
        >
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-crow faIconLeft"
              data-icon="crow"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                {
                  "margin": "auto 0",
                }
              }
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M456 0c-48.6 0-88 39.4-88 88l0 29.2L12.5 390.6c-14 10.8-16.6 30.9-5.9 44.9s30.9 16.6 44.9 5.9L126.1 384l133.1 0 46.6 113.1c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3L311.1 384l40.9 0c1.1 0 2.1 0 3.2 0l46.6 113.2c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3l-42-102C484.9 354.1 544 280 544 192l0-64 0-8 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4C629 52 603.4 32 574 32l-50.1 0C507.7 12.5 483.3 0 456 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                fill="currentColor"
                style={{}}
              />
            </svg>
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english value",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters With custom choice, custom checked 1`] = `
<div
  className="survey-question__input-checkbox-group-container no-wrap"
>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val1"
        />
        <label
          htmlFor="test_val1__input-checkbox__val1"
          onClick={[Function]}
        >
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-crow faIconLeft"
              data-icon="crow"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                {
                  "margin": "auto 0",
                }
              }
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M456 0c-48.6 0-88 39.4-88 88l0 29.2L12.5 390.6c-14 10.8-16.6 30.9-5.9 44.9s30.9 16.6 44.9 5.9L126.1 384l133.1 0 46.6 113.1c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3L311.1 384l40.9 0c1.1 0 2.1 0 3.2 0l46.6 113.2c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3l-42-102C484.9 354.1 544 280 544 192l0-64 0-8 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4C629 52 603.4 32 574 32l-50.1 0C507.7 12.5 483.3 0 456 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                fill="currentColor"
                style={{}}
              />
            </svg>
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english value",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val2"
        />
        <label
          htmlFor="test_val2__input-checkbox__val2"
          onClick={[Function]}
        >
          <span>
            <img
              alt="Unilingual label"
              className="faIconLeft"
              src="img/test.png"
              style={
                {
                  "height": "3em",
                  "margin": "0 0.25em 0 0",
                }
              }
            />
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Unilingual label",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_conditionalVal__input-checkbox__conditionalVal"
          name="test_conditionalVal"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="conditionalVal"
        />
        <label
          htmlFor="test_conditionalVal__input-checkbox__conditionalVal"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english conditional",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val3__input-checkbox__val3"
          name="test_val3"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val3"
        />
        <label
          htmlFor="test_val3__input-checkbox__val3"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Translated string",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container checked"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={true}
          className="input-checkbox"
          id="test_custom__input-checkbox__custom"
          name="test_custom"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="custom"
        />
        <label
          htmlFor="test_custom__input-checkbox__custom"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Other",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="label-input-custom-container"
  >
    <label
      htmlFor="foo.test.custom"
    >
      <span>
        custom label
      </span>
    </label>
    <input
      autoComplete="none"
      className="apptr__form-input input-custom apptr__input-string"
      id="foo.test.custom"
      name="foo.test.custom"
      onBlur={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters With custom choice, custom unchecked 1`] = `
<div
  className="survey-question__input-checkbox-group-container no-wrap"
>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val1"
        />
        <label
          htmlFor="test_val1__input-checkbox__val1"
          onClick={[Function]}
        >
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-crow faIconLeft"
              data-icon="crow"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                {
                  "margin": "auto 0",
                }
              }
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M456 0c-48.6 0-88 39.4-88 88l0 29.2L12.5 390.6c-14 10.8-16.6 30.9-5.9 44.9s30.9 16.6 44.9 5.9L126.1 384l133.1 0 46.6 113.1c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3L311.1 384l40.9 0c1.1 0 2.1 0 3.2 0l46.6 113.2c5 12.3 19.1 18.1 31.3 13.1s18.1-19.1 13.1-31.3l-42-102C484.9 354.1 544 280 544 192l0-64 0-8 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4C629 52 603.4 32 574 32l-50.1 0C507.7 12.5 483.3 0 456 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                fill="currentColor"
                style={{}}
              />
            </svg>
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english value",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val2"
        />
        <label
          htmlFor="test_val2__input-checkbox__val2"
          onClick={[Function]}
        >
          <span>
            <img
              alt="Unilingual label"
              className="faIconLeft"
              src="img/test.png"
              style={
                {
                  "height": "3em",
                  "margin": "0 0.25em 0 0",
                }
              }
            />
          </span>
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Unilingual label",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_conditionalVal__input-checkbox__conditionalVal"
          name="test_conditionalVal"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="conditionalVal"
        />
        <label
          htmlFor="test_conditionalVal__input-checkbox__conditionalVal"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "english conditional",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="survey-question__input-checkbox-group-column"
  >
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_val3__input-checkbox__val3"
          name="test_val3"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="val3"
        />
        <label
          htmlFor="test_val3__input-checkbox__val3"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Translated string",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="survey-question__input-checkbox-input-container"
      onClick={[Function]}
    >
      <div
        className="label-input-container"
      >
        <input
          checked={false}
          className="input-checkbox"
          id="test_custom__input-checkbox__custom"
          name="test_custom"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value="custom"
        />
        <label
          htmlFor="test_custom__input-checkbox__custom"
          onClick={[Function]}
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Other",
              }
            }
          />
        </label>
      </div>
    </div>
  </div>
  <div
    className="label-input-custom-container"
  >
    <label
      htmlFor="foo.test.custom"
    >
      <span>
        custom label
      </span>
    </label>
    <input
      autoComplete="none"
      className="apptr__form-input input-custom apptr__input-string"
      id="foo.test.custom"
      name="foo.test.custom"
      onBlur={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
</div>
`;
